init ledger stok
