# model/lap_stok_model.go
@@ -1,0 +1,12 @@
+package model
+
+import "time"
+
+type LapStock struct {
+	ProductName string
+	Sumber      string
+	Masuk       float64
+	Keluar      float64
+	Saldo       float64
+	Tanggal     time.Time
+}
